# dash-template

./: .pre-commit-config.yaml  LICENSE  alembic.ini  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yaml  feature_request.yaml
.github/workflow/: ci.yaml
app/: __init__.py  server.py
app/assets/css/: style.css
app/assets/js/: callback.js
app/backend/: __init__.py
app/backend/database/: __init__.py
app/backend/database/alembic/: env.py
app/backend/database/alembic/versions/: 1d4189161615_user.py  359a56d8180c_user_session.py
app/backend/database/models/: __init__.py  sessions.py  shared.py  users.py
app/backend/domain/: __init__.py  user.py
app/backend/services/: base.py  user.py
app/error/: __init__.py  base.py  user.py
app/frontend/: __init__.py  app.py
app/frontend/components/: base.py  box.py  button.py  locale.py  store.py
app/frontend/components/forms/: __init__.py
app/frontend/components/forms/inputs/: locale.py  password.py  user_attr.py
app/frontend/components/forms/login/: __init__.py  btn.py  form.py
app/frontend/components/forms/profile/: __init__.py  btn.py  form.py
app/frontend/layout/: __init__.py  header.py  navbar.py  theme.py
app/frontend/pages/: home.py  not_found_404.py  profile.py
app/frontend/pages/auth/: login.py  logout.py  registration.py
app/middleware/: __init__.py  base.py
config/: __init__.py  database.py  server.py
i18n/: en.json  ru.json
test/: conftest.py  models.py  test_i18n_keys.py
test/backend/: test_user.py
(+3 files in other folders)
