[project]
name = "dash-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dash[compress]>=4.0.0",
    "python-dotenv>=1.2.1",
    "orjson>=3.11.7",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "ruff>=0.14.8",
]

[tool.ruff]
line-length = 88
target-version = "py314"
fix = true

[tool.ruff.lint]
select = [
  "E", "W", "F", "I", "UP",
  "B", "SIM", "C4", "TID", "ARG",
  "PTH", "PL", "TRY", "RUF",
]


[tool.ruff.lint.isort]
known-first-party = []
combine-as-imports = true
force-single-line = false
force-sort-within-sections = true
force-wrap-aliases = true
order-by-type = true


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"
avoid-escape = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = [
  "S101",
  "PT001",
  "PT002",
  "PT003",
]

"alembic/**/*.py" = ["ALL"]
"**/alembic/*.py" = ["ALL"]
